update to latest neynar spec
