# src/neynarAPI/neynarV2API/openapi/models/embedded-cast.ts
@@ -1,0 +1,29 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * v2 Farcaster
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+// May contain unused imports in some cases
+// @ts-ignore
+import { CastId } from "./cast-id";
+// May contain unused imports in some cases
+// @ts-ignore
+import { EmbedCastId } from "./embed-cast-id";
+// May contain unused imports in some cases
+// @ts-ignore
+import { EmbedUrl } from "./embed-url";
+
+/**
+ * @type EmbeddedCast
+ * @export
+ */
+export type EmbeddedCast = EmbedCastId | EmbedUrl;
